brat/test/golden/error/multilambda-id2.brat.golden
Error in test/golden/error/multilambda-id2.brat@2:12-13
g = { 0 => ||succ(n) => | }
           ^

  Elab error "Noun required at this position"

